--- a/WheelerRobotics/build.gradle
+++ b/WheelerRobotics/build.gradle
@@ -26,4 +26,16 @@ android {
 dependencies {
     implementation project(':FtcRobotController')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
+    implementation 'org.openftc:easyopencv:1.7.0'
+
+    implementation 'org.apache.commons:commons-math3:3.6.1'
+
+    implementation 'com.acmerobotics.roadrunner:core:0.5.6'
+
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
+
+
+    implementation 'junit:junit:4.12'
+    implementation 'org.mockito:mockito-core:2.23.4'
+    implementation 'org.openftc:apriltag:2.0.0'
 }
