--- a/build.common.gradle
+++ b/build.common.gradle
@@ -56,7 +56,7 @@ android {
         applicationId 'com.qualcomm.ftcrobotcontroller'
         minSdkVersion 24
         //noinspection ExpiredTargetSdkVersion
-        targetSdkVersion 28
+        targetSdkVersion 29
 
         /**
          * We keep the versionCode and versionName of robot controller applications in sync with
@@ -94,14 +94,14 @@ android {
             signingConfig signingConfigs.release
 
             ndk {
-                abiFilters "armeabi-v7a", "arm64-v8a"
+                abiFilters "armeabi-v7a"
             }
         }
         debug {
             debuggable true
             jniDebuggable true
             ndk {
-                abiFilters "armeabi-v7a", "arm64-v8a"
+                abiFilters "armeabi-v7a"
             }
         }
     }
@@ -122,5 +122,8 @@ android {
 }
 
 repositories {
+    flatDir {
+        dirs rootProject.file('libs')
+    }
 }
 
