--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,6 @@ buildscript {
         google()
     }
     dependencies {
-        // Note for FTC Teams: Do not modify this yourself.
         classpath 'com.android.tools.build:gradle:7.2.0'
     }
 }
@@ -26,4 +25,8 @@ allprojects {
 
 repositories {
     mavenCentral()
+
+    flatDir {
+        dirs '../libs'
+    }
 }
