--- a/WheelerRobotics/build.gradle
+++ b/WheelerRobotics/build.gradle
@@ -25,13 +25,13 @@ android {
 
 dependencies {
     implementation project(':FtcRobotController')
+    implementation project(path: ':MeepMeepTesting')
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
     implementation 'org.openftc:easyopencv:1.7.0'
 
     implementation 'org.apache.commons:commons-math3:3.6.1'
 
     implementation 'com.acmerobotics.roadrunner:core:0.5.6'
-
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
 
 
